[tool.poetry]
name = "notion-openstreatmap-integration"
version = "0.1.0"
description = ""
authors = ["khalid khalifah <me@ikhal.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
jinja2 = "^3.1.4"
gunicorn = "^22.0.0"
pydantic = "^2.7.4"
sqlmodel = "^0.0.19"
aiosqlite = "^0.20.0"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
